--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,23 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
+      <build>
+ <plugins>
+ <plugin>
+ <artifactId>maven-jar-plugin</artifactId>
+ <version>3.1.0</version>
+ <configuration>
+ <archive>
+ <manifest>
+ <addClasspath>true</addClasspath>
+ <mainClass>com.example.App</mainClass> 
+ </manifest>
+ </archive>
+ </configuration>
+ </plugin>
+ </plugins>
+ </build>
+
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
